tests/ui/type-not-matched.stderr
error: Found `usize` but expected `i32`.
 --> tests/ui/type-not-matched.rs:9:9
  |
9 |     Bar(usize),
  |         ^^^^^
